; ModuleID = '/home/carl/AnghaBench/kphp-kdb/statsx/extr_statsx-binlog.c_usage.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/statsx/extr_statsx-binlog.c_usage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [68 x i8] c"Debug utils: read stats binlog and dumps events for given counter.\0A\00", align 1
@.str.1 = private unnamed_addr constant [57 x i8] c"\09-c [counter_id]\09Dumps only logevent for given counter.\0A\00", align 1
@.str.2 = private unnamed_addr constant [40 x i8] c"\09-l\09Generate list of all used counters\0A\00", align 1
@.str.3 = private unnamed_addr constant [50 x i8] c"\09-u\09Generate list of active users (finding bots)\0A\00", align 1
@.str.4 = private unnamed_addr constant [17 x i8] c"\09-S<start time>\0A\00", align 1
@.str.5 = private unnamed_addr constant [15 x i8] c"\09-T<end time>\0A\00", align 1
@.str.6 = private unnamed_addr constant [70 x i8] c"\09-i\09use recent snapshot (for the case when first binlog was deleted)\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @usage() #0 {
  %1 = load i32, i32* @stderr, align 4
  %2 = call i32 @fprintf(i32 %1, i8* getelementptr inbounds ([68 x i8], [68 x i8]* @.str, i64 0, i64 0))
  %3 = load i32, i32* @stderr, align 4
  %4 = call i32 @fprintf(i32 %3, i8* getelementptr inbounds ([57 x i8], [57 x i8]* @.str.1, i64 0, i64 0))
  %5 = load i32, i32* @stderr, align 4
  %6 = call i32 @fprintf(i32 %5, i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str.2, i64 0, i64 0))
  %7 = load i32, i32* @stderr, align 4
  %8 = call i32 @fprintf(i32 %7, i8* getelementptr inbounds ([50 x i8], [50 x i8]* @.str.3, i64 0, i64 0))
  %9 = load i32, i32* @stderr, align 4
  %10 = call i32 @fprintf(i32 %9, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.4, i64 0, i64 0))
  %11 = load i32, i32* @stderr, align 4
  %12 = call i32 @fprintf(i32 %11, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.5, i64 0, i64 0))
  %13 = load i32, i32* @stderr, align 4
  %14 = call i32 @fprintf(i32 %13, i8* getelementptr inbounds ([70 x i8], [70 x i8]* @.str.6, i64 0, i64 0))
  %15 = call i32 @exit(i32 2) #3
  unreachable
}

declare dso_local i32 @fprintf(i32, i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
